# meallog

./: .gitignore  PRD_FoodLog.md  PRD_MealLog.md  package.json
.claude/agents/01_ideation/: competitive-intel-analyst.md  market-research-analyst.md  product-strategy-advisor.md  user-research-analyst.md
database/: database.sql  implementation_guide.md  schema.sql
docs/: PRD.md
mobile/: CLAUDE.md  README.md  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mobile/app/: _layout.tsx  auth.tsx  index.tsx  meal-detail.tsx  meal-history.tsx  onboarding.tsx  settings.tsx
mobile/scripts/: i18n-tools.js
mobile/src/: index.ts
server/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  init-db.sql  main.py  pyproject.toml  simple_main.py
server/alembic/: env.py
server/scripts/: dev-setup.sh  show-structure.sh
server/src/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  pagination.py
server/src/analytics/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
server/src/core/: __init__.py  uploads.py
server/src/meals/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/notifications/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/social/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
server/src/users/: __init__.py  models.py  router.py  schemas.py  service.py
(+208 files in other folders)
